Fix alignment of cenchat button

--- a/assets/post.css
+++ b/assets/post.css
@@ -208,3 +208,10 @@
   border-radius: 32px;
   box-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12);
 }
+
+@media (min-width: 960px) {
+  .post__cenchat-button {
+    right: 24px;
+    bottom: 24px;
+  }
+}
